<resources>
    <string name="app_name">Turista Felice</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_text">BENVENUTO</string>
    <string name="login_in">Accedi</string>
    <string name="password">Password</string>
    <string name="login_here">Accedi Qui</string>
    <string name="account_question">Nuovo utente? Crea qui un nuovo account</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="create_new_account">Crea un nuovo account</string>
    <string name="full_name">Nome - Cognome</string>
    <string name="phone_number">Numero di telefono</string>
    <string name="register_now">Registrati</string>
    <string name="already_registered_login_here">Già registrato? Accedi qui</string>
    <string name="logout">Logout</string>
    <string name="your_profile">Profilo</string>
    <string name="verify_now">Email non verificata! Verificala ora</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_favorites">Preferiti</string>
    <string name="waiting_verify">Aspettando la verifica dell\' Email</string>
    <string name="bottom_profile">Profilo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_interests">I Tuoi Interessi</string>
    <string name="change_your_profile">Modifica il tuo profilo</string>
    <string name="save">salva</string>
    <string name="modify_your_profile">Modifica il tuo profilo</string>
    <string name="change_password">Cambia password</string>
    <string name="select_your_interests">Qui sono elecati i luoghi che ti piacerebbe visitare in un giorno di vacanza</string>
    <string name="modify_your_journey">Modifica i tuoi interessi</string>
    <string name="change_your_interests">Modifica i tuoi interessi</string>
    <string name="change_your_interests_tips">Seleziona i luoghi che ti piacerebbe visitare in un giorno di vacanza</string>
    <string name="email">Email</string>
    <string name="citt_preferita">Città Preferita</string>
    <string name="luoghi_visitati">Luoghi Visitati</string>
    <string name="viaggi">Viaggi</string>
    <string name="nome">Nome</string>
    <string name="search_near_you">Scopri luoghi nelle tue vicinanze</string>
    <string name="titolo_ricerca">Voglio andare...</string>
    <string name="how_to_change_profile">"Clicca sui parametri che vuoi modificare"</string>
    <string name="linguaggio">it</string>
    <string name="best_trip" translatable="false"> - -</string>
    <string name="welcome">"Ciao, "</string>
    <string name="city_home_hint">Scopri luoghi in una nuova città</string>
    <string name="gps_button" translatable="false">gps</string>
    <string name="nessun_posto_salvato_string">Nessun posto salvato!</string>
    <string name="fai_una_ricerca_string">Fai una ricerca!</string>
    <string name="descrizione_luogo_salvato">Tocca per visualizzare i tuoi luoghi salvati</string>
    <string name="resented_email">Il nuovo link è stato inviato alla tua email</string>
    <string name="not_resented_email">"Errore : Link non inviato, "</string>
    <string name="reset_psw">Cabiare password?</string>
    <string name="enter_email">Inserisci la mail per ricevere il link</string>
    <string name="si">Si</string>
    <string name="email_required">Email necessaria!</string>
    <string name="psw_required">Password necessaria!</string>
    <string name="invalid_psw">La password deve contenere almeno 6 caratteri</string>
    <string name="phone_required">Numero di telefono necessario!</string>
    <string name="invalid_phone">Il numero di telefono deve contere almeno 6 numeri</string>
    <string name="verify_email">Verifica la tua email</string>
    <string name="check_email_address_bos">Controlla la tua casella postale</string>
    <string name="verified">Verificata</string>
    <string name="resend_email">Reinvia email</string>
    <string name="change_email">Cambia email</string>
    <string name="account_created">Account creato</string>
    <string name="email_not_verified">Email non verificata</string>
    <string name="verification_sent">Email di verifica è stata inviata</string>
    <string name="click_on_what_you_change">Clicca sui parametri che vuoi cambiare</string>
    <string name="change_fav_city">Cambia la tua città preferita</string>
    <string name="insert_new_fav_city">Inserisci la tua nuova città preferita</string>
    <string name="field_cant_be_empty">Il campo non puo essere vuoto</string>
    <string name="annulla">Annulla</string>
    <string name="insert_new_name">Inserisci il nuovo nome</string>
    <string name="change_name">Cambia nome</string>
    <string name="change_phone_number">Cambia numero di telefono</string>
    <string name="insert_new_phone_number">Inserisci un nuovo numero</string>
    <string name="insert_new_psw">Inserisci una nuova password</string>
    <string name="insert_old_pw">Inserisci la tua attuale password</string>
    <string name="validated_user">Utente validato</string>
    <string name="change">Cambia</string>
    <string name="psw_changed">Password cambiata</string>
    <string name="user_not_riautenticated">Utente non riautenticato</string>
    <string name="invalid_field">Uno o più campi sono vuoti</string>
    <string name="saved_profile">Profilo salvato</string>
    <string name="uploaded_image">Immagine Caricata</string>
    <string name="failed">Failed</string>
    <string name="no_profile_image">Nessua immagine caricata</string>
    <string name="you_are_here">Tu sei qui</string>
    <string name="changes_not_allowed">Cambiamenti non consentiti</string>
    <string name="login_failed">Login fallito</string>
    <string name="place_removed">Rimosso dai preferiti</string>
    <string name="place_added">Aggiunto ai preferiti</string>
    <string name="search_not_allowed">Aggiungi almeno un interesse per effettuare la ricerca!</string>
    <string name="todo">TODO</string>
    <string name="text">Text</string>
    <string name="search">Cerca</string>

</resources>
