<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rosa_dei_venti"
    android:id="@+id/fragment_login_id">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/main_text"
        android:textColor="#333331"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_button"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#333331"
        android:textColorHint="#333331"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text" />

 <EditText
     android:id="@+id/password_edit_text"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="32dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="32dp"
     android:background="@drawable/round_button"
     android:drawableStart="@drawable/ic_lock_black_24dp"
     android:drawableLeft="@drawable/ic_lock"
     android:drawablePadding="16dp"
     android:ems="10"
     android:hint="@string/password"
     android:inputType="textPassword"
     android:padding="16dp"
     android:textColor="#333331"
     android:fontFamily="@font/roboto"
     android:textColorHint="#333331"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

 <Button
     android:id="@+id/login_btn"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="1dp"
     android:layout_marginLeft="1dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="55dp"
     android:layout_marginRight="55dp"
     android:background="@drawable/round_bg"
     android:fontFamily="@font/roboto"
     android:singleLine="true"
     android:text="@string/login_in"
     android:textColor="@android:color/white"
     android:textSize="18sp"
     android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@+id/register_btn"
     app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <TextView
        android:id="@+id/forgot_psw_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_password"
        android:textColor="@color/quantum_white_100"

        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
     android:id="@+id/register_btn"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="55dp"
     android:layout_marginLeft="55dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="1dp"
     android:layout_marginRight="1dp"
     android:background="@drawable/round_bg"
     android:singleLine="true"
     android:text="@string/register_now"
     android:fontFamily="@font/roboto"
     android:textSize="18sp"
     android:textStyle="bold"
     app:layout_constraintEnd_toStartOf="@+id/login_btn"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/quantum_white_100"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>